# ziumsync

./: .cursorrules  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-push.yml  pr-checks.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2028fc6c2de0_initial_schema_with_uuids.py  7f05c128caa2_add_none_auth_type.py
backend/tests/: conftest.py  test_api_connections.py  test_api_pipelines.py  test_compiler.py  test_utils.py
backend/ziumsync/: main.py
backend/ziumsync/api/: deps.py
backend/ziumsync/api/v1/: api.py
backend/ziumsync/api/v1/endpoints/: connections.py  credentials.py  pipelines.py  workspaces.py
backend/ziumsync/core/: utils.py
backend/ziumsync/db/: session.py
backend/ziumsync/models/: domain.py
backend/ziumsync/schemas/: domain.py
backend/ziumsync/services/: compiler.py
backend/ziumsync/worker/: celery_app.py  providers.py  tasks.py
docs/skills/backend/: SKILL.md
docs/skills/frontend/: SKILL.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LogStreamViewer.tsx
frontend/src/context/: WorkspaceContext.tsx
frontend/src/hooks/: useConnections.ts  useCredentials.ts  usePipelines.ts  useWorkspaces.ts
frontend/src/lib/: api.ts  queryClient.ts  types.ts
frontend/src/views/: Connections.tsx  Credentials.tsx  Dashboard.tsx  PipelineBuilder.tsx  PipelineDetail.tsx  Pipelines.tsx  Workspaces.tsx
(+11 files in other folders)
